--- a/src/styles/scss/position.scss
+++ b/src/styles/scss/position.scss
@@ -28,6 +28,10 @@ $positions: (
   .pos-#{$name} {
     position: #{$val};
   }
+
+  .pos-#{$name}-imp {
+    position: #{$val} !important;
+  }
 }
 
 @each $name, $val in $positions {
@@ -50,6 +54,7 @@ $tops: (
   0: 0,
   1: 0.0625rem,
   2: 0.125rem,
+  4: 0.25rem,
   6: 0.375rem,
   8: 0.5rem,
   10: 0.625rem,
@@ -91,6 +96,10 @@ $tops: (
 @each $name, $val in $tops {
   .top#{$name} {
     top: #{$val};
+  }
+
+  .top#{$name}-imp {
+    top: #{$val} !important;
   }
 }
 
@@ -145,6 +154,10 @@ $lefts: (
     left: #{$val};
   }
 
+  .left#{$name}-imp {
+    left: #{$val} !important;
+  }
+
   @include tb(left#{$name}) {
     left: #{$val};
   }
@@ -186,6 +199,10 @@ $rights: (
 @each $name, $val in $rights {
   .right#{$name} {
     right: #{$val};
+  }
+
+  .right#{$name}-imp {
+    right: #{$val} !important;
   }
 }
 
@@ -242,6 +259,10 @@ $bottoms: (
 @each $name, $val in $bottoms {
   .bottom#{$name} {
     bottom: #{$val};
+  }
+
+  .bottom#{$name}-imp {
+    bottom: #{$val} !important;
   }
 }
 
